--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.71.1",
     "socket.io-client": "^4.7.4",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
